--- a/MDP/MDP_Black_Jack.ipynb
+++ b/MDP/MDP_Black_Jack.ipynb
@@ -978,7 +978,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1013,6 +1015,26 @@
     "for i ∈ 1:20\n",
     "    println(muestra[i])\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Algunos resultados de nuestra política optima tenemos:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si tiene 4 cartas elige 'fin' porque es la unica accion legal.\n",
+    "\n",
+    "Si tiene como suma 17,18 o 20 y puede pedir otra elige 'fin'.\n",
+    "\n",
+    "Cuando tiene menos que 17 y puede pedir otra carta al parecer la pide. Sin embargo en algunas ocasiones me encontré con situaciones donde decidía finalizar lo que me hace reconsiderar que "
    ]
   },
   {
