--- a/MDP/MDP_Black_Jack.ipynb
+++ b/MDP/MDP_Black_Jack.ipynb
@@ -1019,22 +1019,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "Algunos resultados de nuestra política optima tenemos:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Algunos resultados de nuestra política óptima son:\n",
+    "\n",
     "Si tiene 4 cartas elige 'fin' porque es la unica accion legal.\n",
     "\n",
     "Si tiene como suma 17,18 o 20 y puede pedir otra elige 'fin'.\n",
     "\n",
-    "Cuando tiene menos que 17 y puede pedir otra carta al parecer la pide. Sin embargo en algunas ocasiones me encontré con situaciones donde decidía finalizar lo que me hace reconsiderar que "
+    "Cuando tiene menos que 17 y puede pedir otra carta al parecer la pide. Sin embargo en algunas ocasiones me encontré con situaciones donde decidía finalizar lo que me hace reconsiderar que la función de probabilidad aún falta ajustarse."
    ]
   },
   {
