--- a/MDP/MDP_Black_Jack.ipynb
+++ b/MDP/MDP_Black_Jack.ipynb
@@ -1041,6 +1041,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "EA1FE8D21D71477884FB21045172E618",
+   "lastKernelId": "a0235e68-1007-4035-8a4c-a7b5a7f6af0d"
+  },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
    "language": "julia",
