--- a/julia/intro-to-julia/03. Data structures.ipynb
+++ b/julia/intro-to-julia/03. Data structures.ipynb
@@ -1220,6 +1220,10 @@
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": "9CC3799E98C54296805C41797509EB86",
+   "lastKernelId": "b1b8c008-b12e-4bc3-a9a9-8ed2773a15de"
+  },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
    "language": "julia",
