Tuve que volver a hacer bastante porque lo borre por 'Inteligente'. Eso me pasa por no hacer commits seguido :(

--- a/Aprendizaje_Refuerzo/algoritmos_reforzamiento.ipynb
+++ b/Aprendizaje_Refuerzo/algoritmos_reforzamiento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "ep_greedy (generic function with 1 method)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "softmax (generic function with 1 method)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "politica (generic function with 1 method)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "sarsa (generic function with 1 method)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "expected_sarsa (generic function with 1 method)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "q_learning (generic function with 1 method)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,6 +380,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# semi_gradient_n_step_sarsa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "semi_gradient_n_step_sarsa (generic function with 2 methods)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function semi_gradient_n_step_sarsa(mdp::MDP,value_function,funAction,ϵ,n=1)\n",
+    "    \n",
+    "    s=getInit()\n",
+    "\n",
+    "    a= funAction(mc,s, value_function, ϵ)\n",
+    "    \n",
+    "    states=[s]\n",
+    "    actions = [a]\n",
+    "    rewards = [0.0]\n",
+    "    \n",
+    "    time = 1\n",
+    "    \n",
+    "    T = 9000\n",
+    "    \n",
+    "    while true\n",
+    "        time += 1\n",
+    "        if time <= T\n",
+    "            next_s, reward = step(mc,s, a)\n",
+    "            next_a = funAction(mc,next_s, value_function, ϵ)\n",
+    "            \n",
+    "            # track new state and action\n",
+    "            \n",
+    "            push!(states, next_s)\n",
+    "            push!(actions, next_a)\n",
+    "            push!(rewards, reward)\n",
+    "\n",
+    "            if terminal(mc,next_s)\n",
+    "                T = time\n",
+    "            end\n",
+    "        end\n",
+    "        \n",
+    "        update_time = time - n\n",
+    "        if update_time >= 0\n",
+    "            returns = 0.0\n",
+    "            # calculate corresponding rewards\n",
+    "            for t in (update_time):(min(T, update_time + n))\n",
+    "                returns += rewards[t]\n",
+    "            end\n",
+    "            \n",
+    "            # add estimated state action value to the return\n",
+    "            if update_time + n <= T \n",
+    "                returns += value(value_function,mc,states[update_time + n],actions[update_time + n])\n",
+    "            end\n",
+    "\n",
+    "            # update the state value function\n",
+    "            if !terminal(mc,states[update_time])\n",
+    "                learn(value_function,states[update_time], actions[update_time],\n",
+    "                      returns)\n",
+    "            end\n",
+    "        end\n",
+    "        if update_time == T - 1\n",
+    "            break\n",
+    "        end\n",
+    "        s = next_s\n",
+    "        a = next_a\n",
+    "        \n",
+    "    end\n",
+    "    return time\n",
+    "    \n",
+    "end"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -391,8 +477,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "3046758397B04DE3974FD7BE3980DFFE",
-   "lastKernelId": "cafd8bd3-e412-4256-97ac-35c7b9ebeed8"
+   "lastCommId": "E359F925399B44939291CACC331B49C2",
+   "lastKernelId": "c07ce0f7-08b6-4033-bc00-c98afcdee2c7"
   },
   "kernelspec": {
    "display_name": "Julia 1.0.0",
